[package]
name = "rlinks"
version = "0.6.3"

authors = ["Jose Luis Ricon <jose@ricon.xyz>"]
edition = "2018"
license ="GPL-3.0-or-later"
repository="https://github.com/jlricon/rlinks"
categories=["web-programming::http-client"]
readme="README.md"
description="Rusty Links (rlinks) finds dead links in your website"
keywords=["links","url","async","check"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges.maintenance]
status = "actively-developed"
[dependencies]
clap="*"
select="*"
url="*"
tokio="0.2.0-alpha.4"
http="*"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await","nightly"] }
indicatif="*"
log = "*"
env_logger = "*"
isahc = "*"
console = "*"
[profile.dev]
debug-assertions=true
[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions=false
