[package]
name = "rlinks"
version = "0.6.6"

authors = ["Jose Luis Ricon <jose@ricon.xyz>"]
edition = "2018"
license ="GPL-3.0-or-later"
repository="https://github.com/jlricon/rlinks"
categories=["web-programming::http-client"]
readme="README.md"
description="Rusty Links (rlinks) finds dead links in your website"
keywords=["links","url","async","check"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges.maintenance]
status = "actively-developed"
[dependencies]
clap= "2.33"
select= "0.4"
url= "2.2"
http= "0.1"
futures-preview = { version = "=0.3.0-alpha.18", features = ["async-await","nightly"] }
indicatif= "0.11"
log = "0.4"
env_logger = "0.7"
isahc = "0.7"
console = "0.8"
regex = "1.3.9"

[profile.release]
opt-level = 3
debug = false
lto = true

