[package]
name = "rlinks"
version = "0.6.6"


authors = ["Jose Luis Ricon <jose@ricon.xyz>"]
edition = "2018"
license ="GPL-3.0-or-later"
repository="https://github.com/jlricon/rlinks"
categories=["web-programming::http-client"]
readme="README.md"
description="Rusty Links (rlinks) finds dead links in your website"
keywords=["links","url","async","check"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[badges.maintenance]
status = "actively-developed"
[dependencies]
clap= "2.33"
select= "0.5"
url= "2.1"
http= "0.2"
futures = "0.3.14"
indicatif= "0.16"
log = "0.4"
env_logger = "0.8"
isahc = {version = "1.3", features = ["cookies"] }
console = "0.14"
regex = "1.3.9"

[profile.release]
opt-level = 3
debug = false
lto = true

